Fix broken relative paths

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8">
     <title>WebAssembly Ray Tracer</title>
-    <link rel="stylesheet" href="./assets/style.css">
+    <link rel="stylesheet" href="/wasm-raytracer/assets/style.css">
   </head>
   <body>
     <img id="rendered-scene" src="">
@@ -19,7 +19,7 @@
 
     <button id="render-scene">Render</button>
 
-    <script type="module" src="./assets/loadWasm.js"></script>
-    <script type="module" src="./assets/index.js"></script>
+    <script type="module" src="/wasm-raytracer/assets/loadWasm.js"></script>
+    <script type="module" src="/wasm-raytracer/assets/index.js"></script>
   </body>
 </html>
